--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
 <html>
-Prototype på hvordan en hær bevæger sig:
-<iframe src="https://editor.p5js.org/ajrp/embed/83fiu_Dr"></iframe>
+<head>
+<title>Real Time Strategy - med p5.js</title>
+</head>
+<body>
+
+</body>
 </html>
