--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Real Time Strategy - med p5.js</title>
 </head>
 <body>
-Prototype, der viser hærens bevægelse.  
-<iframe src="https://editor.p5js.org/ajrp/embed/83fiu_Dr"></iframe>
+Prototype, der viser hærens bevægelse.<br>
+<iframe src="https://editor.p5js.org/ajrp/embed/83fiu_Dr" width="400" height="400"></iframe>
 </body>
 </html>
