--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>Real Time Strategy - med p5.js</title>
 </head>
 <body>
-Prototype, der viser hærens bevægelse.<br>
+Projektet på gitHub:<br>
+<a href="https://github.com/DDUEksamensEksempelRTS/DDUEksamensEksempelRTS.github.io">https://github.com/DDUEksamensEksempelRTS/DDUEksamensEksempelRTS.github.io</a><br>
+Prototype 4: En hærs bevægelse.<br>
 <iframe src="https://editor.p5js.org/ajrp/embed/83fiu_Dr" width="400" height="400"></iframe>
 </body>
 </html>
