--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <title>Real Time Strategy - med p5.js</title>
 </head>
 <body>
-Projektet på gitHub:<br>
+Projektet på gitHub:
 <a href="https://github.com/DDUEksamensEksempelRTS/DDUEksamensEksempelRTS.github.io">https://github.com/DDUEksamensEksempelRTS/DDUEksamensEksempelRTS.github.io</a><br>
+<br>
 Prototype 4: En hærs bevægelse.<br>
 <iframe src="https://editor.p5js.org/ajrp/embed/83fiu_Dr" width="400" height="400"></iframe>
 </body>
