--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 <body>
 Projektet på gitHub:
 <a href="https://github.com/DDUEksamensEksempelRTS/DDUEksamensEksempelRTS.github.io">https://github.com/DDUEksamensEksempelRTS/DDUEksamensEksempelRTS.github.io</a><br>
+
 <br>
-Prototype 4: En hærs bevægelse.<br>
+Prototype 4: En hærs bevægelse - hardcoded<br>
 <iframe src="https://editor.p5js.org/ajrp/embed/83fiu_Dr" width="400" height="400"></iframe>
+
+<br>
+Prototype 5: En hærs bevægelse - Med smart algoritme & tre klasser Hær og Række og RækkePosition <br>
+<iframe src="https://editor.p5js.org/ajrp/embed/0ETz8ssy" width="400" height="400"></iframe>
+  
 </body>
 </html>
