--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 <body>
 Projektet på gitHub:
 <a href="https://github.com/DDUEksamensEksempelRTS/DDUEksamensEksempelRTS.github.io">https://github.com/DDUEksamensEksempelRTS/DDUEksamensEksempelRTS.github.io</a><br>
-
-<br>
+<br><br>  
+Der anvendes 'Vertical Prototyping',<br>
+Dvs. selve systemet deles op i dele og hver enkelt del udvikles seperat. <br>
+Denne metode kan med fordel anvendes når man er på ukendt grund og skal udvilke noget helt nyt, som man ikke har erfaring med.<br>
+<br><br>
+ARMY MOVEMENT PROTOTYPES  
+<br><br>
 Prototype 4: En hærs bevægelse - hardcoded<br>
 <iframe src="https://editor.p5js.org/ajrp/embed/83fiu_Dr" width="400" height="400"></iframe>
 
